# Magyar-Kartya

./: .gitignore  CMakeLists.txt  Magyar-Kartya.sln  README.md
Client/: Card.cpp  Card.h  Client.cpp  Client.h  Client.vcxproj  Client.vcxproj.filters  Deck.cpp  Deck.h  Enemy.cpp  Enemy.h  Host.cpp  Host.h  Logic.cpp  Logic.h  OnlineEnemy.cpp  OnlineEnemy.h  OnlinePlayer.cpp  OnlinePlayer.h  OnlineUser.cpp  OnlineUser.h  Player.cpp  Player.h  clientSession.cpp  game.cpp  gameMenu.cpp  hostSession.cpp  main.cpp  multiplayer.cpp  multiplayerSetup.cpp  singlePlayer.cpp  textureArray.cpp  textureArray.h  windowSettings.cpp
Client-side Testing/: Client-side Testing.vcxproj  Client-side Testing.vcxproj.filters  Client.cpp  Client.h  Host.cpp  Host.h  User.cpp  User.h  main.cpp
Client/src/: Card.cpp  Client.cpp  Deck.cpp  Enemy.cpp  Host.cpp  Logic.cpp  OnlineEnemy.cpp  OnlinePlayer.cpp  OnlineUser.cpp  Player.cpp  TextureHandler.cpp  gameMenu.cpp  hostSession.cpp  main.cpp  multiplayer.cpp  multiplayerSetup.cpp  singleplayer.cpp  singleplayerSetup.cpp  textureArray.cpp  windowSettings.cpp
Client/src/headers/: Card.h  Client.h  Deck.h  Enemy.h  Host.h  Logic.h  OnlineEnemy.h  OnlinePlayer.h  OnlineUser.h  ReturnCodes.h  TextureHandler.h  textureArray.h
Server/: Server.cpp  Server.h  Server.vcxproj  main.cpp
src/: Card.cpp  Card.hpp  Client.cpp  Client.hpp  Deck.cpp  Deck.hpp  Enemy.cpp  Enemy.hpp  Host.cpp  Host.hpp  Logic.cpp  Logic.hpp  OnlineEnemy.cpp  OnlineEnemy.hpp  OnlinePlayer.cpp  OnlinePlayer.hpp  OnlineUser.cpp  OnlineUser.hpp  Player.cpp  Player.hpp  ReturnCodes.hpp  TextureHandler.cpp  TextureHandler.hpp  gameMenu.cpp  get_user_path.cpp  main.cpp  multiplayer.cpp  multiplayerSetup.cpp  singleplayer.cpp  singleplayerSetup.cpp  textureArray.cpp  textureArray.hpp  windowSettings.cpp  windowSettings.hpp
